--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -124,6 +124,44 @@
     "export": "Export",
     "unsavedChangesWarning": "You have unsaved changes. Are you sure you want to leave?"
   },
+  "backup": {
+    "added": "Added",
+    "autoDescription": "Automatic backup description",
+    "automatic": "Automatic",
+    "compareWith": "Compare with",
+    "confirmRestore": "Confirm restore",
+    "create": "Create backup",
+    "createBackup": "Create backup",
+    "createError": "Failed to create backup",
+    "createNow": "Create now",
+    "createSuccess": "Backup created successfully",
+    "current": "Current backup",
+    "description": "Backup description",
+    "diffError": "Diff error",
+    "diffTitle": "Diff",
+    "eventChanges": "Event changes",
+    "manual": "Manual",
+    "manualDescription": "Manual backup description",
+    "modified": "Modified",
+    "newValue": "New value",
+    "noAutoBackups": "No automatic backups",
+    "noDiffData": "No diff data",
+    "noEventChanges": "No event changes",
+    "noManualBackups": "No manual backups",
+    "noSportChanges": "No sport changes",
+    "oldValue": "Old value",
+    "removed": "Removed",
+    "restore": "Restore",
+    "restoreConfirmation": "Do you want to restore?",
+    "restoreError": "Failed to restore",
+    "restoreSuccess": "Restored successfully",
+    "restoreWarning": "Restore warning",
+    "showDiff": "Show diff",
+    "sportChanges": "Sport changes",
+    "title": "Backup",
+    "version": "Version",
+    "createBackupHelp": "Create a backup of your current data"
+  },
   "adminHelp": {
     "title": "Admin Help",
     "contents": "Contents",
