--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -248,7 +248,46 @@
     "deleteConfirmationDetails": "この操作は取り消せません",
     "noEvents": "イベントがありません",
     "sportCount": "競技数: {{count}}",
-    "sportsCount": "競技数: {{count}}"
+    "sportsCount": "競技数: {{count}}",
+    "backup": "バックアップ",
+    "deleteConfirmationTitle": "削除の確認"
+  },
+  "backup": {
+    "added": "追加済み",
+    "autoDescription": "自動バックアップの説明",
+    "automatic": "自動",
+    "compareWith": "比較する",
+    "confirmRestore": "復元を確認",
+    "create": "バックアップ作成",
+    "createBackup": "バックアップを作成",
+    "createError": "バックアップ作成に失敗しました",
+    "createNow": "今すぐ作成",
+    "createSuccess": "バックアップ作成に成功しました",
+    "current": "現在のバックアップ",
+    "description": "バックアップの説明",
+    "diffError": "差分取得エラー",
+    "diffTitle": "差分",
+    "eventChanges": "イベントの変更",
+    "manual": "手動",
+    "manualDescription": "手動バックアップの説明",
+    "modified": "変更済み",
+    "newValue": "新しい値",
+    "noAutoBackups": "自動バックアップがありません",
+    "noDiffData": "差分データがありません",
+    "noEventChanges": "イベントの変更がありません",
+    "noManualBackups": "手動バックアップがありません",
+    "noSportChanges": "競技の変更がありません",
+    "oldValue": "古い値",
+    "removed": "削除済み",
+    "restore": "復元",
+    "restoreConfirmation": "復元しますか？",
+    "restoreError": "復元に失敗しました",
+    "restoreSuccess": "復元に成功しました",
+    "restoreWarning": "復元の警告",
+    "showDiff": "差分を表示",
+    "sportChanges": "競技の変更",
+    "title": "バックアップ",
+    "version": "バージョン"
   },
   "settings": {
     "appearance": "外観",
